# torrentleech-cli

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: artifacts.yml  nix.yml
skills/torrentleech/: SKILL.md
src/: app.rs  auth.rs  categories.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  output.rs  show.rs
src/commands/: categories.rs  config.rs  download.rs  login.rs  logout.rs  mod.rs  search.rs  show.rs  whoami.rs
src/download/: mod.rs
src/search/: mod.rs
tests/: categories.rs  cli_auth.rs  cli_config_categories.rs  cli_download.rs  cli_search.rs  cli_show.rs  client_auth.rs  config.rs  download.rs  exit_codes.rs  foundation.rs  output.rs  search.rs  show.rs
tests/fixtures/auth/: browser_only.html  captcha.html  cloudflare.html  login.html  login_failed.html  protected.html
tests/fixtures/download/: detail.html
tests/fixtures/search/: browse.html  malformed.html  zero.html
tests/fixtures/show/: detail.html
tests/support/: mod.rs
