[package]
name = "torrentleech-cli"
version = "0.1.0"
edition = "2024"
authors = [""]
description = "Command line client for TorrentLeech"
license = "MIT"

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
percent-encoding = "2.3"
rpassword = "7.3"
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.9"
url = { version = "2.5", features = ["serde"] }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls", "gzip", "brotli"] }
cookie_store = { version = "0.22", default-features = false, features = ["serde_json", "preserve_order", "public_suffix"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
